--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="counter">
 
         <div class="box">
-            <span>0+experience</span>
+            <span>experience</span>
             <h3>fresher</h3>
         </div>
 
