--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="counter">
 
         <div class="box">
-            <span>0</span>
+            <span>experience</span>
             <h3>fresher</h3>
         </div>
 
