--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 <!-- portfolio section starts  -->
 
-<section class="portfolio" id="portfolio">
+<section class="my project" id="my project">
 
 <h1 class="heading"> my <span>projects</span> </h1>
 
