--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="#home">home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#education">education</a></li>
-            <li><a href="#my project">my project</a></li>
+             <li><a href="#portfolio">my project</a></li>
             <li><a href="#contact">contact</a></li>
         </ul>
     </nav>
@@ -164,7 +164,7 @@
 
 <!-- portfolio section starts  -->
 
-<section class="my project" id="my project">
+<section class="portfolio" id="portfolio">
 
 <h1 class="heading"> my <span>projects</span> </h1>
 
