--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li>Api: java naming and directory interface(jndi)</li>
            <li>software: eclipse, microsoft visual studio community,apex,visualforce</li></h3>
 
-        <a href="https://drive.google.com/drive/my-drive?msclkid=ae5b236db5f311eca07b22f8476a88c6"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
+        <li><a href="https://drive.google.com/drive/my-drive?msclkid=ae5b236db5f311eca07b22f8476a88c6" target= ""><button class="btn"> download CV <i class="fas fa-download"></i> </button></a></li>
     </div>
 
     <div class="counter">
