--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li>Api: java naming and directory interface(jndi)</li>
            <li>software: eclipse, microsoft visual studio community,apex,visualforce</li></h3>
 
-        <li><a href="https://drive.google.com/drive/my-drive?msclkid=ae5b236db5f311eca07b22f8476a88c6" target="_blank" rel="nooperner"  rel="nooferrer"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a></li>
+        <li><a href="https://drive.google.com/file/d/190LCXEeiI-VTzSzZFxvUxsWL-eGLRrbX/view?usp=sharing" target="_blank" rel="nooperner"  rel="nooferrer"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a></li>
     </div>
 
     <div class="counter">
@@ -129,7 +129,7 @@
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>(08/2021 - Present) </span>
-        <h3><a href="https://partho97.github.io/avengers-github.com/">Fitness Website Design and Development (“Avengers”)</a></h3>
+        <li><h3><a href="https://partho97.github.io/avengers-github.com/" target="_blank" rel="nooperner"  rel="nooferrer>Fitness Website Design and Development (“Avengers”)</a></h3></li>
         <p>1>Developed implemented and tested website for “AVENGERS GYM”.
             <br>2>Built products using HTML, CSS, and JAVASCRIPT.
             <br>3>Built user interfaces and prototype from wireframe and design 
@@ -139,7 +139,7 @@
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>(02/2022 - Present)</span>
-        <h3><a href="https://partho97.github.io/GoCart/">E-Commerce Online Shopping Website Development</h3></a>
+        <li><h3><a href="https://partho97.github.io/GoCart/"target="_blank" rel="nooperner"  rel="nooferrer>E-Commerce Online Shopping Website Development</h3></a><li>
         <p>1>Developed, implemented and tested website for an "E-commerce Shopping store"
             <br>2>Created product pages using HTML, CSS, and JAVASCRIPT.
             <br>3>Built UI design and prototypes from wireframe and design 
@@ -149,7 +149,7 @@
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>(03/2022 - Present)</span>
-        <h3><a href="https://partho97.github.io/Timezone/">Timezone Website Development</h3></a>
+       <li> <h3><a href="https://partho97.github.io/Timezone/"target="_blank" rel="nooperner"  rel="nooferrer>Timezone Website Development</h3></a></li>
         <p>1>Developed, implemented and tested website for an "TimeZone" 
             <br>2>Created product pages using HTML, CSS, and JAVASCRIPT.
             <br>3>Built UI design and prototypes from wireframe and design 
@@ -171,27 +171,27 @@
 <div class="box-container">
 
     <div class="box">
-        <a href="https://partho97.github.io/Infinite-Flight/"><img src="images/img1.jpg" alt=""></a>
+        <li><a href="https://partho97.github.io/Infinite-Flight/" target="_blank" rel="nooperner"  rel="nooferrer><img src="images/img1.jpg" alt=""></a></li>
     </div>
 
     <div class="box">
-        <a href="https://partho97.github.io/Timezone/"><img src="images/img2.jpg" alt=""></a>
+       <li> <a href="https://partho97.github.io/Timezone/"target="_blank" rel="nooperner"  rel="nooferrertarget="_blank" rel="nooperner"  rel="nooferrertarget="_blank" rel="nooperner"  rel="nooferrer><img src="images/img2.jpg" alt=""></a></li>
     </div>
 
     <div class="box">
-        <a href="https://partho97.github.io/foodblogging/"><img src="images/img3.jpg" alt=""></a>
+        <li><a href="https://partho97.github.io/foodblogging/"target="_blank" rel="nooperner"  rel="nooferrertarget="_blank" rel="nooperner"  rel="nooferrertarget="_blank" rel="nooperner"  rel="nooferrer><img src="images/img3.jpg" alt=""></a></li>
     </div>
 
     <div class="box">
-        <a href="https://partho97.github.io/GoCart/"><img src="images/img4.jpg" alt=""></a>
+        <li><a href="https://partho97.github.io/GoCart/"target="_blank" rel="nooperner"  rel="nooferrertarget="_blank" rel="nooperner"  rel="nooferrertarget="_blank" rel="nooperner"  rel="nooferrer><img src="images/img4.jpg" alt=""></a></li>
     </div>
 
     <div class="box">
-        <a href="https://partho97.github.io/learningspider/"><img src="images/img5.jpg" alt=""></a>
+        <li><a href="https://partho97.github.io/learningspider/"target="_blank" rel="nooperner"  rel="nooferrertarget="_blank" rel="nooperner"  rel="nooferrer><img src="images/img5.jpg" alt=""></a></li>
     </div>
 
     <div class="box">
-       <a href="https://partho97.github.io/avengers-github.com/"> <img src="images/img6.jpg" alt=""></a>
+       <li><a href="https://partho97.github.io/avengers-github.com/"target="_blank" rel="nooperner"  rel="nooferrertarget="_blank" rel="nooperner"  rel="nooferrer> <img src="images/img6.jpg" alt=""></a></li>
     </div>
 
 </div>
@@ -215,8 +215,8 @@
         <div class="info">
             <h3> <i class="fas fa-envelope"></i> parthokrdey97@gmail.com </h3>
             <h3> <i class="fas fa-phone"></i> +91-9062681888 </h3>
-            <li><a href="https://www.linkedin.com/in/partha-dey-475137177"><i class="fab fa-linkedin"></i>Linkedin</a></li>
-            <li><a href="https://github.com/Partho97"><i class="fab fa-github"></i>github</a></li>
+            <li><a href="https://www.linkedin.com/in/partha-dey-475137177"target="_blank" rel="nooperner"  rel="nooferrer><i class="fab fa-linkedin"></i>Linkedin</a></li>
+            <li><a href="https://github.com/Partho97"><i class="fab fa-github"target="_blank" rel="nooperner"  rel="nooferrer></i>github</a></li>
             <h3> <i class="fas fa-map-marker-alt"></i> west bengal,kolkata, india - 700101. </h3>
             
         </div>
