--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h1>I'M <span>Partha Dey</span></h1>
     <p>I am a Software Developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations. A responsive design makes your website accessible to all users,regardless of their device. I can work in an environment that challenges me to improve and constantly thrive for perfection in all the tasks allotted to me. 
     </p>
-    <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
+    <a href="#about"><button class="btn">About Me <i class="fas fa-user"></i></button></a>
 
 </section>
 
