--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </section>
 
     <section class="education" id="education">
-        <h1 class="heading">about my <span>projects</span> </h1>
+        <h1 class="heading">About My <span>Projects</span> </h1>
         <div class="box-container">
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
