--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h1>I'M <span>Partha Dey</span></h1>
     <p>I am a Software Developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations. A responsive design makes your website accessible to all users,regardless of their device. I can work in an environment that challenges me to improve and constantly thrive for perfection in all the tasks allotted to me. 
     </p>
-    <a href="#about"><button class="btn">About Me <i class="fas fa-user"></i></button></a>
+    <a href="#about"><button class="btn">ABOUT ME <i class="fas fa-user"></i></button></a>
 
 </section>
 
@@ -63,12 +63,12 @@
 <div class="row">
 
     <div class="info">
-        <h3> <span> name : </span> Partha Dey </h3>
-        <h3> <span> dob : </span> 04-Nov-1997 </h3>
-        <h3> <span> qualification : </span> B.tech </h3>
-        <h3> <span> post : </span> Software Developer </h3>
-        <h3> <span> language : </span> English </h3>
-         <h3> <span> skills : </span><li>Languages: Java,Core Java,OOPs Concept,HTML,CSS,Javascript,PHP,Wordpress </li>
+        <h3> <span> NAME : </span> Partha Dey </h3>
+        <h3> <span> DOB : </span> 04-Nov-1997 </h3>
+        <h3> <span> QUALIFICATION : </span> B.tech </h3>
+        <h3> <span> POST : </span> Software Developer </h3>
+        <h3> <span> LANGUAGE : </span> English </h3>
+         <h3> <span> SKILLs : </span><li>Languages: Java,Core Java,OOPs Concept,HTML,CSS,Javascript,PHP,Wordpress </li>
             <li>Database: MySql,Oracle SQL,Database SQL command</li>
             <li>Framework: J2EE,JSF,Java Collection Framework,Lighting Component Framework</li>
             <li>API: Java Naming and Directory Interface(jndi)</li>
@@ -232,7 +232,7 @@
         <input type="email" placeholder="email" class="box">
         <input type="text" placeholder="project" class="box">
         <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea>
-        <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
+        <button type="submit" class="btn"> SEND <i class="fas fa-paper-plane"></i> </button>
 
     </form>
 
