--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#education">Education</a></li>
-             <li><a href="#portfolio">My Project</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#home">HOME</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#education">EDUCATION</a></li>
+             <li><a href="#portfolio">MY PROJECT</a></li>
+            <li><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
 
@@ -58,7 +58,7 @@
 
 <section class="about" id="about">
 
-<h1 class="heading"> <span>About</span> Me </h1>
+<h1 class="heading"> <span>ABOUT</span> ME </h1>
 
 <div class="row">
 
@@ -99,7 +99,7 @@
 
 <section class="education" id="education">
 
-<h1 class="heading"> My <span>Education</span> </h1>
+<h1 class="heading"> MY <span>EDUCATION</span> </h1>
 
 <div class="box-container">
 
@@ -124,7 +124,7 @@
 </section>
 
     <section class="education" id="education">
-        <h1 class="heading">About My <span>Projects</span> </h1>
+        <h1 class="heading"> MY <span>PROJECTs</span> </h1>
         <div class="box-container">
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
@@ -169,7 +169,7 @@
 
 <section class="portfolio" id="portfolio">
 
-<h1 class="heading"> My <span>Projects</span> <p>(Click the Project Picture)</p></h1>
+<h1 class="heading"> CLICK ON THE  <span>PROJECT's BANNER</span> </h1>
 
 <div class="box-container">
 
@@ -207,7 +207,7 @@
 
 <section class="contact" id="contact">
 
-<h1 class="heading"> <span>Contact</span> Me </h1>
+<h1 class="heading"> <span>CONTACT</span> ME </h1>
 
 <div class="row">
 
