--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>(02/2022 - Present)</span>
-        <h3>E-Commerce Online Shopping Website Development</h3>
+        <h3>E-Commerce Grocery Online Shopping Website Development</h3>
         <h3>URL Link:<a href="https://partho97.github.io/GoCart/"target="_blank" rel="nooperner"  rel="nooferrer">https://partho97.github.io/GoCart/</a></h3>
         <p>1>Developed, implemented and tested website for an "E-commerce Shopping store"
             <br>2>Created product pages using HTML, CSS, and JAVASCRIPT.
