--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 
     <h3>HI THERE !</h3>
     <h1>I'M <span>Partha Dey</span></h1>
-    <p>I am a Software Developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations. A responsive design makes your website accessible to all users,regardless of their device. I can work in an environment that challenges me to improve and constantly thrive for perfection in all the tasks allotted to me. 
-    </p>
+    <p>I am an aspiring software developer who's keen to learn new advanced technologies that help to create interesting software development projects.I believe coding can solve real-world problems and I have always been inspired to automate and improve existing systems with a developer centric approach to deliver software products faster and more frequently. With this motivation, I have joined courses to learn Core Java, J2EE, SQL to gain more in depth knowledge and also working on some implementations.Being a self motivated and adaptable person, I look forward to new challenges and contributing as teams player. </p>
     <a href="#about"><button class="btn">ABOUT ME <i class="fas fa-user"></i></button></a>
 
 </section>
@@ -74,7 +73,7 @@
             <li>API: Java Naming and Directory Interface(jndi)</li>
            <li>Software: Eclipse, Microsoft Visual Studio Community,APEX,Visualforce</li></h3>
 
-        <li><a href="https://drive.google.com/file/d/190LCXEeiI-VTzSzZFxvUxsWL-eGLRrbX/view?usp=sharing" target="_blank" rel="nooperner"  rel="nooferrer"><button class="btn"> DOWNLOAD CV <i class="fas fa-download"></i> </button></a></li>
+        <li><a href="https://drive.google.com/file/d/1QFVjtRtEMSNXOT-M1ikHn3c3B210YZ9b/view?usp=sharing" target="_blank" rel="nooperner"  rel="nooferrer"><button class="btn"> DOWNLOAD CV <i class="fas fa-download"></i> </button></a></li>
     </div>
 
     <div class="counter">
