--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h3>Bachelor of Technology MAKAUT(W.B.)</h3>
         <p>Institute:Narula Institute of Technology</p>
         <p>Course: Civil Engineer</p>
-        <p>City,CGPA: Kolkata, 7.46</p>
+        <p>City: Kolkata,CGPA: 7.46</p>
     </div>
 
     <div class="box">
@@ -117,7 +117,7 @@
         <h3>Diploma WBSCTE(W.B.)</h3>
         <p>Institute:Narula Institute of Technology</p>
         <p>Course: Civil Engineer</p>
-        <p>City,CGPA: Kolkata, 7.0</p>
+        <p>City: Kolkata,CGPA: 7.0</p>
     </div>
 </div>
 </section>
@@ -139,23 +139,23 @@
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>(02/2022 - Present)</span>
-        <h3>E-Commerce Grocery Online Shopping Website Development</h3>
+        <h3>Online Grocery Shopping Website (“GroCart”)</h3>
         <h3>URL Link:<a href="https://partho97.github.io/GoCart/"target="_blank" rel="nooperner"  rel="nooferrer">https://partho97.github.io/GoCart/</a></h3>
-        <p>1>Developed, implemented and tested website for an "E-commerce Shopping store"
-            <br>2>Created product pages using HTML, CSS, and JAVASCRIPT.
-            <br>3>Built UI design and prototypes from wireframe and design 
-            <br>4>Deployed application in a cross platform, cross-browser environmen </p>
+        <p>1>Developed a Grocery Ecommerce Shopping website which contains pages like products, categories, promotional offers, shopping cart, checkout, customer review etc.
+            <br>2>The website's pages were built using HTML, CSS, and JAVASCRIPT.Implemented user interfaces and prototype from wireframe and design.
+            <br>3>Implemented user interfaces and prototype from wireframe and design.
+            <br>4>The application is developed in a way that can be compatible in cross platform, cross-browser environments. </p>
     </div>
 
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>(03/2022 - Present)</span>
-        <h3>Timezone Website Development</h3>
+        <h3>Gaming Installation Website ("Timezone")</h3>
        <h3>URL Link:<a href="https://partho97.github.io/Timezone/"target="_blank" rel="nooperner"  rel="nooferrer">https://partho97.github.io/Timezone/</a></h3>
-        <p>1>Developed, implemented and tested website for an "TimeZone" 
-            <br>2>Created product pages using HTML, CSS, and JAVASCRIPT.
-            <br>3>Built UI design and prototypes from wireframe and design 
-            <br>4>Deployed application in a cross platform, cross-browser environmen </p>
+        <p>1>Timezone is a website built to cater to the interest of online gamers;it's a central repository of popular online games in categorised features. 
+            <br>2>Developed, implemented and tested the website using HTML, CSS, and JAVASCRIPT.
+            <br>3>Built user interfaces and prototype from wireframe and design that can be used in cross platform, cross-browser environments.
+     </p>
     </div>
 
 </div>
