--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li>API: Java Naming and Directory Interface(jndi)</li>
            <li>Software: Eclipse, Microsoft Visual Studio Community,APEX,Visualforce</li></h3>
 
-        <li><a href="https://drive.google.com/file/d/1QFVjtRtEMSNXOT-M1ikHn3c3B210YZ9b/view?usp=sharing" target="_blank" rel="nooperner"  rel="nooferrer"><button class="btn"> DOWNLOAD CV <i class="fas fa-download"></i> </button></a></li>
+        <li><a href="https://drive.google.com/file/d/1QA3NRdS1xFGPSusj5TllZbrCcXfO0Co0/view?usp=drivesdk" target="_blank" rel="nooperner"  rel="nooferrer"><button class="btn"> DOWNLOAD CV <i class="fas fa-download"></i> </button></a></li>
     </div>
 
     <div class="counter">
