--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <i class="fas fa-graduation-cap"></i>
         <span>(02/2022 - Present)</span>
         <h3>Online Grocery Shopping Website (“GroCart”)</h3>
-        <h3>URL Link:<a href="https://partho97.github.io/GoCart/"target="_blank" rel="nooperner"  rel="nooferrer">https://partho97.github.io/GoCart/</a></h3>
+        <h3>URL Link:<a href="https://partho97.github.io/GroCart/"target="_blank" rel="nooperner"  rel="nooferrer">https://partho97.github.io/GroCart/</a></h3>
         <p>1>Developed a Grocery Ecommerce Shopping website which contains pages like products, categories, promotional offers, shopping cart, checkout, customer review etc.
             <br>2>The website's pages were built using HTML, CSS, and JAVASCRIPT.Implemented user interfaces and prototype from wireframe and design.
             <br>3>Implemented user interfaces and prototype from wireframe and design.
