--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </div>
 
     <div class="box">
-        <li><a href="https://partho97.github.io/GoCart/"target="_blank" rel="nooperner"  rel="nooferrer"><img src="images/img4.jpg" alt=""></a></li>
+        <li><a href="https://partho97.github.io/GroCart/"target="_blank" rel="nooperner"  rel="nooferrer"><img src="images/img4.jpg" alt=""></a></li>
     </div>
 
     <div class="box">
