--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
              <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>(08/2021 - Present) </span>
-         <h3>Fitness Website Design and Development (“Avengers”)</h3>
-        <h3>URL Link:<a href="https://partho97.github.io/avengers-github.com/" target="_blank" rel="nooperner"  rel="nooferrer">partho97.github.io/avengers-github.com/</a></h3>
-        <p>1>Developed implemented and tested website for “AVENGERS GYM”.
+         <h3>Booking for those Flights and Hotels (“Infinite-Flight”)</h3>
+        <h3>URL Link:<a href="https://partho97.github.io/Infinite-Flight" target="_blank" rel="nooperner"  rel="nooferrer">https://partho97.github.io/Infinite-Flight</a></h3>
+        <p>1>Developed implemented and tested website for “Infinite-Flight”.
             <br>2>Built products using HTML, CSS, and JAVASCRIPT.
             <br>3>Built user interfaces and prototype from wireframe and design 
             <br>4>Coded and developed application in a cross platform, cross- browser environment </p>
