--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                     <a href="https://twitter.com/samd97_dey" target="_blank" style="color:white;"><i class="fab fa-twitter" style="color:white;"></i> Twitter</a>
                 </div>
                 <div class="various col-lg-3 col-md-4 col-sm-6">
-                    <a href="https://www.linkedin.com/in/partha-dey-475137177" target="_blank" style="color:white;"><i class="fab fa-linkedin" style="color:white;"></i> LinkedIN</a>
+                    <a href="https://www.linkedin.com/in/partha-dey-475137177" target="_blank" style="color:white;"><i class="fa fa-linkedin" style="color:white;"></i> LinkedIN</a>
                 </div>
                 <div class="various col-lg-3 col-md-4 col-sm-6">
                     <a href="https://www.codechef.com/users/partho_19997" target="_blank" style="color:white;"><i class="fa fa-cubes" style="color:white;"></i> Codechef</a>
