--- a/index.html
+++ b/index.html
@@ -138,23 +138,23 @@
                         I am a civil engineer undergrad at NIT (MAKAUT). Even though i have done my BTech in civil,I have been a "Computer" person and having interest in IT technology,hence personally I do studies in lastest technologies in IT;I have also completed few personal projects in web development.I am a full stack developer. You can check out my projects at GitHub .</p>
             <div class="box-containers">
                 <div class="box">
-                    <p> <span>Web Development</span> 70% </p>
+                    <p> <span>Web Development </span>  70% </p>
                     <div class="line mg"></div>
                    </div>
                    <div class="box">
-                    <p> <span> Core Java/J2EE </span>65% </p>
+                    <p> <span> Core Java/J2EE </span>  65% </p>
                     <div class="line ps"></div>
                    </div>
                    <div class="box">
-                    <p> <span> Oracle SQL/MySQL </span> 60% </p>
+                    <p> <span> Oracle SQL/MySQL </span>  60% </p>
                     <div class="line uxd"></div>
                    </div>
                 <div class="box">
-                    <p> <span> UX Design<</span> 50% </p>
+                    <p> <span> UX Design </span> 50% </p>
                     <div class="line axd"></div>
                    </div>
                    <div class="box">
-                    <p> <span> WordPress </span> 80% </p>
+                    <p> <span> WordPress </span>  80% </p>
                     <div class="line dm"></div>
                    </div>
             </div>
