--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
 
         <div class="box tilt">
             <img src="images/blog-img-2.png" alt="">
-            <h3> QSPIDER </h3>
+            <h3> QSPIDER/Jspider/Pspider </h3>
             <p> Scored 80% in final test of Programming in 
                             <br>Java FULL STACK DEVELOPMENT by QSPIDER.</p>
-            <a href="#" class="btn">Know more</a>
+            <a href="" class="btn">Know more</a>
         </div>
 
         <div class="box tilt">
@@ -195,7 +195,7 @@
             <h3> StudySection </h3>
             <p>Got Certificate of JavaScript Programming, HTML5, CSS3,
                             <br> PHP Programming,Salesforce Apex programming</p>
-            <a href="#" class="btn">Know more</a>
+            <a href="www.studysection.com" class="btn">Know more</a>
         </div>
 
     </div>
