--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <h3> StudySection </h3>
             <p>Got Certificate of JavaScript Programming, HTML5, CSS3,
                             <br> PHP Programming,Salesforce Apex programming</p>
-            <a href="www.studysection.com" class="btn">Know more</a>
+            <a href="https://www.studysection.com/" class="btn">Know more</a>
         </div>
 
     </div>
