--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <p>4 star in JAVA<br>
                             5 star in SQL<br>
                             5 star in Functional Programming</p>
-            <a href="https://www.hackerrank.com/parthokrdey97" class="btn">Know more</a>
+            <a href="https://www.hackerrank.com/parthokrdey97" target="_blank" rel="nooperner"  rel="nooferrer"  class="btn">Know more</a>
         </div>
 
         <div class="box tilt">
@@ -187,7 +187,7 @@
             <h3> QSPIDER/Jspider/Pspider </h3>
             <p> Scored 80% in final test of Programming in 
                             <br>Java FULL STACK DEVELOPMENT by QSPIDER.</p>
-            <a href="" class="btn">Know more</a>
+            <a href="" target="_blank" rel="nooperner"  rel="nooferrer"  class="btn">Know more</a>
         </div>
 
         <div class="box tilt">
@@ -195,7 +195,7 @@
             <h3> StudySection </h3>
             <p>Got Certificate of JavaScript Programming, HTML5, CSS3,
                             <br> PHP Programming,Salesforce Apex programming</p>
-            <a href="https://www.studysection.com/" class="btn">Know more</a>
+            <a href="https://www.studysection.com/" target="_blank" rel="nooperner"  rel="nooferrer"  class="btn">Know more</a>
         </div>
 
     </div>
