--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <div class="box tilt">
             <img src="images/photo3.jpg" alt="">
             <div class="content">
-                <a href="https://partho97.github.io/foodblogging/"target="_blank" rel="nooperner"  rel="nooferrer" class="btn">Click Here</a>
+                <a href="https://partho97.github.io/foodOrder/"target="_blank" rel="nooperner"  rel="nooferrer" class="btn">Click Here</a>
             </div>
         </div>
 
