--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <p> <span> address : </span> Kolkata, india - 700101 </p>
                 </div>
             </div>
-            <a href="https://drive.google.com/file/d/1QA3NRdS1xFGPSusj5TllZbrCcXfO0Co0/view?usp=drivesdk"target="_blank" rel="nooperner"  rel="nooferrer" class="btn">download CV</a>
+            <a href="https://drive.google.com/file/d/1PWzJcCRxNn8pQO0Y6uaQQ5m2pfn83BjO/view?usp=sharing"target="_blank" rel="nooperner"  rel="nooferrer" class="btn">download CV</a>
         </div>
 
     </div>
